fix early rounding while importing CSV data